--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,10 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;display=swap"
     />
     <title>React App</title>
-    <link rel="stylesheet" href="@sweetalert2/theme-material-ui/material-ui.css">
+    <link
+      rel="stylesheet"
+      href="@sweetalert2/theme-material-ui/material-ui.css"
+    />
     <script id="react-dotenv" src="./env.js"></script>
     <script src="sweetalert2.all.min.js"></script>
   </head>
